--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,11 @@
 FROM public.ecr.aws/docker/library/node:18-alpine AS build
 WORKDIR /app
 
-# Copy only package.json and package-lock.json first to leverage Docker caching
+# Copy package.json and package-lock.json first
 COPY package.json package-lock.json ./
-RUN npm install
+
+# Ensure a clean install
+RUN rm -rf node_modules package-lock.json && npm install --legacy-peer-deps
 
 # Copy the rest of the application files
 COPY . .
@@ -18,4 +20,3 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
-
